<resources>
    <string name="discountprice">discountPrice</string>
    <string name="list_model">Samsung Galaxy Ultra</string>
    <string name="carousel_model">Iphone 12</string>
    <string name="buy_now">Buy now!</string>
    <string name="new_patch">New</string>
    <string name="location_city">Moscow</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="x">X</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price_dialog">Price</string>
    <string name="size_dialog">Size</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="see_more_">see more</string>

    <string-array name="brands">
        <item>Samsung</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
        <item>IPhone</item>
    </string-array>

    <string-array name="prices">
        <item>$0 - $300</item>
        <item>$300 - $500</item>
        <item>$600 - $2000</item>
        <item>$2000 - $10000</item>
    </string-array>

    <string-array name="size">
        <item> 4.5 to 5.5 inches </item>
    </string-array>
</resources>